--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,9 @@
-certifi==2018.4.16
-chardet==3.0.4
-defusedxml==0.5.0
-dj-database-url==0.5.0
-Django==2.0.5
-django-heroku==0.3.1
-gunicorn==19.9.0
-idna==2.7
-oauthlib==2.1.0
-pkg-resources==0.0.0
+Flask==1.0.2
+itsdangerous==0.24
+Jinja2==2.10
 psycopg2==2.7.5
-PyJWT==1.6.4
-python3-openid==3.1.0
 pytz==2018.4
 requests==2.19.1
-requests-oauthlib==1.0.0
 six==1.11.0
-social-auth-app-django==2.1.0
-social-auth-core==1.7.0
 urllib3==1.23
-whitenoise==3.3.1
+Werkzeug==0.14.1
